--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/lodash": "^4.14.116",
     "fela": "^6.1.9",
+    "fela-beautifier": "^5.0.15",
+    "fela-plugin-friendly-pseudo-class": "^5.0.17",
+    "fela-plugin-lvha": "^5.0.15",
+    "lodash": "^4.17.10",
+    "prettier": "^1.14.2",
+    "randomcolor": "^0.5.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-fela": "^7.3.1",
-    "react-scripts-ts": "2.17.0"
+    "react-scripts-ts": "2.17.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "tslint-plugin-prettier": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
